[package]
name = "wasm-webgl-common"
version = "0.1.0"
authors = ["Eddie <eddiepie@gmail.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.10"
wasm-bindgen = "0.2.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'HtmlImageElement',
  'CssStyleDeclaration',
    'Document',
    'Element',
    'Event',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'InputEvent',
    'MouseEvent',
    'Node',
    'Touch',
    'TouchEvent',
    'TouchList',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlRenderbuffer',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'WheelEvent',
    'Window',
    'console',
]
