[package]
name = "pong"
version = "0.1.0"
authors = ["Eddie <eddiepie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
log = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.1"
shrev = "1.0.1"

[dependencies.specs]
version = "0.14"
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlFormElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'HtmlOutputElement',
  'HtmlLabelElement',
#  'InputEvent',
#  'MouseEvent',
  'Node',
#  'Touch',
#  'TouchEvent',
#  'TouchList',
  'WebGlBuffer',
#  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
#  'WheelEvent',
  'Window',
  'console',
]
