[package]
name = "pong"
version = "0.1.0"
authors = ["Eddie <eddiepie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
log = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.1"
shrev = "1.0.1"
cgmath = "0.17.0"
specs = { version = "0.14.3", default-features = false }
shred = { version = "0.7.1", default-features = false }
shred-derive = "0.5.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlFormElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'HtmlOutputElement',
  'HtmlLabelElement',
#  'InputEvent',
  'KeyboardEvent',
  'Node',
#  'Touch',
#  'TouchEvent',
#  'TouchList',
  'WebGlBuffer',
#  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
#  'WheelEvent',
  'Window',
  'console',
]