[package]
name = "simple_app"
version = "0.1.0"
authors = ["Eddie <eddiepie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.1"
nalgebra-glm = "0.3"
shrev = "1.0.1"

[dependencies.specs]
version = "0.14"
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlFormElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'HtmlOutputElement',
  'HtmlLabelElement',
#  'InputEvent',
#  'MouseEvent',
  'Node',
#  'Touch',
#  'TouchEvent',
#  'TouchList',
  'WebGlBuffer',
#  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
#  'WheelEvent',
  'Window',
  'console',
]

[profile.release]
lto = true
opt-level = 'z'
