[package]
name = "textured_quad"
version = "0.1.0"
authors = ["Eddie <eddiepie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.10"
wasm-bindgen = "0.2.33"
image = "*"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
