[package]
name = "textured_quad"
version = "0.1.0"
authors = ["Eddie <eddiepie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-webgl-common]
path = "../common"

[dependencies]
js-sys = "0.3.10"
wasm-bindgen = "0.2.33"
[dependencies.resource]
version  = "~0.2.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlTexture',
  'ImageData',
  'WebGlVertexArrayObject',
]
